# so-novel-rs

./: .clippy.toml  .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  DISCLAIMER.md  Dockerfile  GPUI_MIGRATION_PLAN.md  README.md  build.rs  docker-compose.yml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-release.yml  release.yml
assets/: chapter_epub.tmpl  chapter_html.tmpl
bundle/: config.ini  source-overrides.json
bundle/rules/: main.json  proxy-required.json
crates/material_icons/: Cargo.toml  README.md
crates/material_icons/src/: lib.rs
docs/: BOOK_SOURCES.md  CHANGELOG.md  CHANGELOG_ALL.md  CLI.md  ENTERPRISE_REFACTOR_REPORT.md  WEB.md
docs/superpowers/plans/: 2026-07-08-so-novel-rs-refactor.md  2026-07-11-markdown-export.md  2026-07-11-tasks-delete-toast.md  2026-07-11-tasks-url-download.md
docs/superpowers/specs/: 2026-07-03-web-ui-rewrite-design.md  2026-07-11-markdown-export-design.md  2026-07-11-tasks-delete-toast-design.md  2026-07-11-tasks-url-download-design.md
locales/: app.yml
scripts/: fix_settings_broken.sed  install-hooks.sh  migrate_i18n.py  package-linux.sh  rename_i18n_keys.sed
src/: app.rs  cli.rs  error.rs  i18n.rs  lib.rs  logger.rs  logging.rs  main.rs  window.rs
src/app/: cover.rs  download.rs  download_task.rs  events.rs  health.rs  library.rs  library_state.rs  list_cache.rs  mod.rs  now.rs  persistence.rs  runtime.rs  search.rs  search_state.rs  sources.rs  sources_state.rs  tasks.rs  tasks_db.rs  tasks_init.rs  toast.rs  trace.rs  ui_event.rs  update.rs  update_state.rs
src/app/ops/: download.rs  library.rs  mod.rs  search.rs  settings.rs  sources.rs  update.rs
src/cli/: args.rs  download.rs  mod.rs  search.rs  sources.rs  tests.rs  util.rs
src/config/: defaults.rs  loader.rs  mod.rs  paths.rs  tests.rs  toml_io.rs  types.rs
src/constant/: error_code.rs  mod.rs
src/core/: async_progress.rs  bootstrap.rs  config_helpers.rs  download_task.rs  library.rs  mod.rs  search.rs  sources.rs  update.rs
src/crawler/: cover_updater.rs  download.rs  download_options.rs  health.rs  mod.rs  progress.rs  resolve.rs  retry.rs  search.rs
src/db/: mod.rs  rules.rs  sources.rs  sources_config.rs  tasks.rs  tasks_init.rs
src/db/rules/: apply_default.rs  constants.rs  error.rs  init.rs  loader.rs  mod.rs
src/design_system/: button.rs  chip.rs  color.rs  font.rs  frame.rs  input.rs  mod.rs  popup.rs  settings.rs  theme_picker.rs  toggle.rs
src/desktop/: drain_loop.rs  mod.rs  nav.rs  notifications.rs  root.rs
src/desktop/components/: mod.rs  page_header.rs  pagination.rs  status_badge.rs
src/desktop/model/: download.rs  events.rs  library.rs  library_state.rs  list_cache.rs  mod.rs  persistence.rs  search.rs  search_state.rs  sources_state.rs  tasks.rs  trace.rs  ui_event.rs  update_state.rs
src/desktop/model/ops/: download.rs  library.rs  mod.rs  search.rs  settings.rs  sources.rs  update.rs
src/desktop/pages/search/: delegate.rs  detail_dialog.rs  mod.rs  range_dialog.rs  result_row.rs  source_select.rs  toolbar.rs
src/desktop/pages/settings/: ctx.rs  fields.rs  mod.rs  page_crawl.rs  page_general.rs  page_proxy.rs
src/desktop/pages/sources/: mod.rs  row.rs  toolbar.rs
src/desktop/pages/tasks/: mod.rs  row.rs  summary.rs
src/desktop/themes/: init.rs
src/export/: epub.rs  exporter.rs  html.rs  md.rs  mod.rs  pdf.rs  render.rs  txt.rs
src/export/pdf/: chapters.rs  document.rs  fonts.rs  mod.rs
src/gpui_app/: drain_loop.rs  i18n.rs  logo.rs  mod.rs  nav.rs  notifications.rs  root.rs  themes.rs
src/gpui_app/components/: empty_state.rs  formatting.rs  mod.rs  page_header.rs  pagination.rs  status_badge.rs
src/gpui_app/pages/: library.rs  mod.rs  search.rs  settings.rs  sources.rs  tasks.rs
src/gpui_app/pages/search/: ctx.rs  mod.rs  (+6 more)
src/gpui_app/themes/: apply.rs  embedded.rs  init.rs  mod.rs  user_dir.rs
src/http/: cf.rs  client.rs  clients.rs  encoding.rs  fetch.rs  mod.rs  ua.rs  url_join.rs  util.rs
src/js/: mod.rs  runtime.rs
src/logger/: mod.rs
src/material_icons/: icons.rs  mod.rs
src/models/: book.rs  chapter.rs  content_type.rs  mod.rs  rule.rs  search.rs  source_info.rs  task_record.rs
src/parser/: book.rs  cache.rs  chapter.rs  dom.rs  filter.rs  formatter.rs  mod.rs  search.rs  search_filter.rs  search_quanben5.rs  toc.rs
src/parser/book/: cover.rs  meta.rs  mod.rs
src/parser/chapter/: mod.rs  pagination.rs  parse.rs
src/parser/dom/: mod.rs  selector.rs  transform.rs
src/parser/toc/: mod.rs  paginated.rs  single.rs  utils.rs
src/persistent/: mod.rs  rules.rs  sources_config.rs
src/rules/: loader.rs  mod.rs  overrides.rs  source.rs
src/startup/: mod.rs  web.rs
src/ui/: mod.rs  nav.rs  theme.rs  title_bar.rs
src/ui/pages/: about.rs  library.rs  mod.rs  search.rs  settings.rs  sources.rs  tasks.rs
src/util/: formatting.rs  fs.rs  lang.rs  mod.rs  system.rs  time.rs  zhconv.rs
src/utils/: formatting.rs  fs.rs  lang.rs  lock.rs  mod.rs  system.rs  time.rs  tty.rs  zhconv.rs
src/web/: error.rs  error_code.rs  locale.rs  mod.rs  routes.rs  tests.rs
src/web/handlers/: book.rs  download.rs  health.rs  index.html  library.rs  lock.rs  misc.rs  mod.rs  search.rs  settings.rs  sources.rs  tasks.rs
src/web/static/: app.js  components.html  style.css  theme.js
tasks/: audit-summary.md  lessons.md  review.md  todo.md
tests/: bundle_integration.rs
web-ui/: REFACTOR_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/: app-select.tsx  app-switch.tsx  confirm-dialog.tsx  number-input.tsx  theme-toggle.tsx
web-ui/src/contexts/: search-context.tsx
web-ui/src/hooks/: use-book.ts  use-download.ts  use-library.ts  use-search.ts  use-settings.ts  use-sources.ts  use-tasks.ts
web-ui/src/i18n/: index.ts
web-ui/src/lib/: api.ts  language.ts  sse.test.ts  sse.ts  test-types.ts  types.ts  utils.ts
web-ui/src/routes/: book-detail.tsx  library.tsx  search.tsx  settings.tsx  sources.tsx  tasks.tsx
(+23 files in other folders)
