[package]
name = "so-novel-rs"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "So Novel — Rust desktop client (gpui + gpui-component)."
license = "Apache-2.0"
publish = false

[[bin]]
name = "so-novel-rs"
path = "src/main.rs"

[dependencies]
# UI — GPUI 栈
gpui = "0.2.2"
gpui-component = "0.5.1"
# gpui-component-assets 提供内置 icon 资源；可选，但启用后可避免自己 embed 图标字体
gpui-component-assets = "0.5.1"
# 国际化 —— rust-i18n（同 gpui-component 内部用的库），我们直接复用框架机制：
# - `locales/app.yml` 装翻译表（编译期嵌入）
# - `rust_i18n::i18n!("locales", fallback = "en")` 初始化
# - `t!("key")` 宏查当前全局 locale 的翻译
# 全局 locale 由 `gpui_component::set_locale(lang)` 设置（同时影响 gpui-component 自己的 YAML）。
rust-i18n = "3"

# Async runtime (kept lean — used in later stages; pulled now so tests/integration are stable)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }

# smol：gpui 0.2.2 的 `cx.spawn` 用的是 smol executor（在 smol 之上封了一层），
# 不是 tokio。在 cx.spawn 的 future 内部**不能**用 `tokio::time::sleep` /
# `tokio::sync::mpsc::channel` —— 那边没有 tokio reactor，会 panic。
# LibraryPage 的 watcher 任务必须用 smol 的 channel + smol 定时器（通过
# `async_cx.background_executor().timer(...)` 拿）。
# 选 smol 而非给项目新加 tokio runtime：项目顶层只有 gpui 一个 runtime，
# 再起一个 tokio runtime 会导致两套 executor 共存、background task 跨线程
# 调度难以追踪。
smol = "2"

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 按天滚动的日志文件 appender（main.rs 注册到 tracing subscriber，跟 stdout 一起输出）。
# 保留策略（30 天）由启动时清理逻辑自己做 —— tracing-appender 不自带 retention。
tracing-appender = "0.2"

# Config / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1.3"
# 配置文件用 TOML（取代旧的 config.ini / configparser）。
# 用 toml_edit 而非 toml — 后者写出会丢注释和顺序；toml_edit 保留原文档结构，
# 设置页编辑后写回不会洗掉用户的注释 / 字段排列。
toml_edit = { version = "0.25", features = ["serde"] }

# Filesystem helpers
directories = "6"

# 文件系统监听（本地书库实时刷新）。gpui-component 0.5.1 内部也用 7.0.0，
# default-features 在三大平台都给出可用后端（Windows ReadDirectoryChangesW /
# macOS FSEvents / Linux inotify）。debounce 由 LibraryPage 的 watcher 任务
# 内部用 tokio::time::sleep + AtomicU64 计数器自行实现，不再引入
# notify-debouncer-mini 增加编译时间和依赖图复杂度。
notify = "7"

# HTTP client (rustls 避免 OpenSSL 依赖；cookies 用于规则中的 Cookie 头注入；
# gzip/brotli 解压由 reqwest 透明处理)。
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "cookies",
    "gzip",
    "brotli",
    "stream",
    "blocking",
    "form",
] }

# HTML / 选择器 / 正则
scraper = "0.27"
regex = "1"

# 编码兜底（GBK / Big5 等老站点）
encoding_rs = "0.8"
chardetng = "1"

# JavaScript 引擎（书源规则 @js: 后处理 + quanben5 加密）。
# 选 boa 而非 rquickjs：纯 Rust 无 C 工具链依赖，
# 现有规则全部 ES5/ES6 子集 boa 完整支持（详见 audit §6.1 的修订）。
boa_engine = "0.21"

# 静态/惰性初始化（UA 池等）
once_cell = "1"
rand = "0.10"

# 图片解码校验：下载的封面字节在缓存前用 image::ImageReader 校验是否真的是有效图片，
# 避免 UI 渲染时才发现 Failed（GPUI 不会在下载阶段做解码）。
image = "0.25"

# URL 解析与拼接（absUrl）
url = "2"

# 字符串相似度（聚合搜索结果排序用，等价 Java hutool StrUtil.similar）。纯 Rust 无依赖。
strsim = "0.11"

# EPUB 生成（纯 Rust + 内置 zip）。0.8 系列与 epub-builder 当前稳定版。
epub-builder = "0.8"

# zip 打包（HTML 整本下载用）。关掉 bzip2/lzma 等带 C 依赖的特性，只保留 deflate；
# 减少在 Windows MSVC 上编译时对 cl.exe 的潜在依赖。
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }

# CLI 子命令（5c）。
clap = { version = "4", features = ["derive"] }

# 原生文件选择对话框（书源管理「添加」按钮：选 JSON 文件导入）。
# Linux 走 xdg-portal 而非默认 GTK3，避免引入 gtk3 系统依赖；
# Windows / macOS 走原生 IFileOpenDialog / NSOpenPanel。
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

# 临时目录（测试用 — `ConfigPaths::discover` / `load_rules_from_db` 的单元测试
# 通过 `tempfile::tempdir()` 把 `~/.sonovel` 重定向到临时目录避免污染用户主目录）。
tempfile = "3"

# SQLite — bundled 模式零系统依赖，单文件 DB 持久化下载任务记录（后续书源覆写也会走这个库）。
rusqlite = { version = "0.40", features = ["bundled"] }

# 读系统本地时区（UtcOffset::current_local_offset）。local-offset feature 在 Windows / macOS / Linux
# 各自调 OS API（GetTimeZoneInformation / localtime_r / ...），跨平台用一个 API 拿偏移秒数。
time = { version = "0.3", default-features = false, features = ["local-offset"] }

# Windows DWM 圆角 / 暗色标题栏暂未在 GPUI 路径启用（Stage 12 决定）。
# 当前只保留 CLI 模式需要的 console attach 那一部分 feature。
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    # CLI 模式启动时把 stdio 附到父进程的控制台（cmd / PowerShell），
    # 让 GUI subsystem 的 exe 也能像普通 console app 一样输出。
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
# 测试用：构造最小 PNG 验证 cover_entry_from_bytes。
image = "0.25"

# 在 Windows 上把 assets/logo.ico 嵌入 exe 的资源段（资源管理器/任务栏会看到图标）。
# build.rs 调用，仅 Windows target 需要。
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
