[package]
name = "so-novel-rs"
version = "0.3.4"
edition = "2024"
rust-version = "1.85"
description = "So Novel — Rust desktop client (gpui + gpui-component)."
license = "AGPL-3.0-only"
publish = false

[[bin]]
name = "so-novel-rs"
path = "src/main.rs"

[features]
default = ["gui"]
# GUI 桌面特性：拉入 GPUI 栈 + 文件对话框 + 文件监听 + LRU 封面缓存。
# 默认开启 —— 主入口是 GUI 客户端（gpui_app::run），CLI / Web 走子路径。
# `cargo build --no-default-features --features gui` 得到仅含 GUI 的二进制。
gui = [
    "dep:gpui",
    "dep:gpui-component",
    "dep:gpui-component-assets",
    "dep:rfd",
    "dep:notify",
]
# Web 服务特性：拉入 axum 栈 + SSE 流工具。
# `cargo build --no-default-features --features web` 得到不含任何 GPUI 系统库链接的 Web 二进制
# （Dockerfile 用这个路径，去掉所有 xcb/xkbcommon/wayland/egl/mesa/vulkan 依赖）。
web = [
    "dep:rust-embed",
    "dep:mime_guess",
    "dep:axum",
    "dep:axum_session",
    "dep:tower-http",
    "dep:async-stream",
    "dep:futures",
]

[dependencies]
# UI — GPUI 栈（gui feature 专属）
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", optional = true }
# gpui-component-assets 提供内置 icon 资源；可选，但启用后可避免自己 embed 图标字体
gpui-component-assets = { version = "0.5.1", optional = true }
# 国际化 —— rust-i18n（同 gpui-component 内部用的库），我们直接复用框架机制：
# - `locales/app.yml` 装翻译表（编译期嵌入）
# - `rust_i18n::i18n!("locales", fallback = "en")` 初始化
# - `t!("key")` 宏查当前全局 locale 的翻译
# 全局 locale 由 `gpui_component::set_locale(lang)` 设置（同时影响 gpui-component 自己的 YAML）。
rust-i18n = "3"

# Async runtime (kept lean — used in later stages; pulled now so tests/integration are stable)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }

# smol：gpui 0.2.2 的 `cx.spawn` 用的是 smol executor（在 smol 之上封了一层），
# 不是 tokio。在 cx.spawn 的 future 内部**不能**用 `tokio::time::sleep` /
# `tokio::sync::mpsc::channel` —— 那边没有 tokio reactor，会 panic。
# LibraryPage 的 watcher 任务必须用 smol 的 channel + smol 定时器（通过
# `async_cx.background_executor().timer(...)` 拿）。
# 选 smol 而非给项目新加 tokio runtime：项目顶层只有 gpui 一个 runtime，
# 再起一个 tokio runtime 会导致两套 executor 共存、background task 跨线程
# 调度难以追踪。
smol = "2"

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
# `ansi` feature 必须开：`tracing-subscriber` 默认会用 `Style::italic/dimmed`
# 给字段名（`trace_id=` 等）加颜色码；不开启此 feature 时 `.with_ansi(false)`
# `json` feature: 启用后 `.json()` layer 可用, 容器/聚合栈用; 默认开 (PR #17)
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "json"] }

# Config / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1.3"
# 配置文件用 TOML（取代旧的 config.ini / configparser）。
# 用 toml_edit 而非 toml — 后者写出会丢注释和顺序；toml_edit 保留原文档结构，
# 设置页编辑后写回不会洗掉用户的注释 / 字段排列。
toml_edit = { version = "0.25", features = ["serde"] }

# Filesystem helpers
directories = "6"

# 文件系统监听（本地书库实时刷新）。gpui-component 0.5.1 内部也用 7.0.0，
# default-features 在三大平台都给出可用后端（Windows ReadDirectoryChangesW /
# macOS FSEvents / Linux inotify）。debounce 由 LibraryPage 的 watcher 任务
# 内部用 `background_executor().timer(...)`（gpui/smol timer）+ AtomicU64
# 计数器自行实现，不再引入 notify-debouncer-mini 增加编译时间和依赖图复杂度。
notify = { version = "8.2", optional = true }

# HTTP client (rustls 避免 OpenSSL 依赖；cookies 用于规则中的 Cookie 头注入；
# gzip/brotli 解压由 reqwest 透明处理)。
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "cookies",
    "gzip",
    "brotli",
    "stream",
    "form",
    "query",
] }

# HTML / 选择器 / 正则
scraper = "0.27"
regex = "1"

# 编码兜底（GBK / Big5 等老站点）
encoding_rs = "0.8"
chardetng = "1"

# JavaScript 引擎（书源规则 @js: 后处理 + quanben5 加密）。
# 选 boa 而非 rquickjs：纯 Rust 无 C 工具链依赖，
# 现有规则全部 ES5/ES6 子集 boa 完整支持（详见 audit §6.1 的修订）。
boa_engine = "0.21"

# 静态/惰性初始化（UA 池等）。原来用 once_cell 1.x，
# Rust 1.80+ 提供 `std::sync::LazyLock`（[std::sync::LazyLock]），行为等价，
# 编译期 const fn 约束也兼容我们的用法。已在 13 个文件中批量替换为 std 版本。
rand = "0.10"

# 图片解码校验：下载的封面字节在缓存前用 image::ImageReader 校验是否真的是有效图片，
# 避免 UI 渲染时才发现 Failed（GPUI 不会在下载阶段做解码）。
image = "0.25"

# URL 解析与拼接（absUrl）
url = "2"

# 字符串相似度（聚合搜索结果排序用，等价 Java hutool StrUtil.similar）。纯 Rust 无依赖。
strsim = "0.11"

# EPUB 生成（纯 Rust + 内置 zip）。0.8 系列与 epub-builder 当前稳定版。
epub-builder = "0.8"

# zip 打包（HTML 整本下载用）。关掉 bzip2/lzma 等带 C 依赖的特性，只保留 deflate；
# 减少在 Windows MSVC 上编译时对 cl.exe 的潜在依赖。
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }

# CLI 子命令（5c）。
clap = { version = "4", features = ["derive"] }

# Web 前端资源嵌入（web feature 专属）。
# `include-exclude` 按 #[folder] 的 .gitignore 规则过滤（跳过 .map / node_modules / src 等）。
rust-embed = { version = "8", features = ["include-exclude"], optional = true }
# MIME 类型推导，给 rust-embed 提供的静态文件设置 Content-Type。
mime_guess = { version = "2", optional = true }
# Web 服务：axum（tokio 原生 HTTP 框架）+ tower-http（CORS 中间件）。（web feature 专属）
axum = { version = "0.8", features = ["macros"], optional = true }
axum_session = { version = "0.20", optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
tower-http = { version = "0.7", features = ["cors"], optional = true }


# 原生文件选择对话框（书源管理「添加」按钮：选 JSON 文件导入）。
# Linux 走 xdg-portal 而非默认 GTK3，避免引入 gtk3 系统依赖；
# Windows / macOS 走原生 IFileOpenDialog / NSOpenPanel。
#
# rfd 0.17 起移除了 ashpd / async-std / tokio runtime feature：`xdg-portal` 现在
# 自带 pollster（轻量 blocking poll executor），不再依赖 ashpd，也就不再有「gpui
# 默认启 ashpd async-std、rfd 再启 tokio 触发 ashpd compile_error」的旧冲突。
# AsyncFileDialog API 不变，仍返回 impl Future，由调用方的 executor（gpui 的
# background_executor）驱动。
rfd = { version = "^0.17.2", default-features = false, features = ["xdg-portal"], optional = true }

# 读系统本地时区（UtcOffset::current_local_offset）。local-offset feature 在 Windows / macOS / Linux
# 各自调 OS API（GetTimeZoneInformation / localtime_r / ...），跨平台用一个 API 拿偏移秒数。
time = { version = "0.3", default-features = false, features = ["local-offset"] }
zhconv = "0.4.1"
# 不启用 `rendering` feature：项目只用 `pdf_oxide::writer::{DocumentBuilder, ...}` 直接拼文本
# （详见 `src/export/pdf.rs:6-7` 注释，不走 `from_html_css` 渲染流水线）。`rendering` 会拉入
# 一整套 HTML/CSS 解析依赖，编译时间显著增加而无功能收益。
pdf_oxide = { version = "0.3.70" }

# LRU 缓存（`SearchState::cover_cache` 走有界 LRU 替代无界 HashMap，
# 避免长会话累积所有查看过的封面字节）。
lru = "0.18"

# Windows DWM 圆角 / 暗色标题栏暂未在 GPUI 路径启用（Stage 12 决定）。
# 当前只保留 CLI 模式需要的 console attach 那一部分 feature。
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    # CLI 模式启动时把 stdio 附到父进程的控制台（cmd / PowerShell），
    # 让 GUI subsystem 的 exe 也能像普通 console app 一样输出。
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
# 测试用：构造最小 PNG 验证 cover_entry_from_bytes。
image = "0.25"
# axum Router 在测试里走 tower::ServiceExt::oneshot。
tower = { version = "0.5", features = ["util"] }

# 在 Windows 上把 assets/logo.ico 嵌入 exe 的资源段（资源管理器/任务栏会看到图标）。
# build.rs 调用，仅 Windows target 需要。
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# -------------------------------------------------------------------------------------
# 企业级 lint 配置 (PR #1, 2026-07-08)
# -------------------------------------------------------------------------------------
# 设计原则:
#   - rust 编译期 lint 全开, 不允许 `unsafe_code`(仓库无 unsafe 需求)
#   - clippy 走 pedantic + nursery 渐进式收紧, 当前阶段以 warn 为主
#   - 豁免点必须写 `// ponytail: <理由>` 或本文件注明原因
# -------------------------------------------------------------------------------------

[lints.rust]
# 用 `deny` 而非 `forbid`: 项目内有合法 unsafe 用法 (Windows console attach),
# 集中在 `startup/mod.rs`, 加 `// SAFETY:` 注释。新增 unsafe 会被 deny 显式拒绝,
# 但需 `#[allow(unsafe_code)]` 才能写, 强制评审。
unsafe_code = "deny"
missing_docs = "warn"
# 失效的 unsafe 标记 (2024 edition 新 lint; 项目无 unsafe 实际不会触发)
invalid_value = "warn"
# rust 2024 死代码裁剪; clippy 也有同源 lint, 保留 rust 官方更准确
dead_code = "warn"

[lints.clippy]
# pedantic 整体 warn, 不阻塞当前 PR; PR #5 起逐项清理
pedantic = { level = "warn", priority = -1 }
# nursery 同上, 偶有 false-positive, 边收边 allow
nursery = { level = "warn", priority = -1 }
# 模块名重复 (如 `error::Error`) 风格上对 crate 外用户可见, 业务代码不强制
module_name_repetitions = "allow"
# `must_use` 候选 — 过多 false-positive (内部 helper), 留待 PR #5 评估
must_use_candidate = "allow"
# 缺失错误文档 (本项目多数函数返回 `AppResult<T>`, 单独写错文档成本高)
missing_errors_doc = "allow"
# `cast_*` 损失精度 — 业务层刻意 (i64→i32 时间戳), 由调用方负责
cast_possible_truncation = "allow"
cast_lossless = "allow"

# -------------------------------------------------------------------------------------
# PR #5a: 安全性 pedantic lint 收紧
# 目标: 让裸 unwrap/expect/panic 显式可见, 逐步替换为 `?` / `AppError`。
# 现状: 全仓 372 处非测试 unwrap/expect/panic (db/ 35, export/pdf.rs 34, ...),
# 一次性清理会撞业务逻辑, 分 3 个子 PR (5a/5b/5c) 渐进收紧。
# -------------------------------------------------------------------------------------
# pedantic 子集中, 与"安全/正确性"相关的几条独立提到 deny/warn 级别,
# 让 `cargo clippy` 在 CI 阶段就拦住新增违规:
unwrap_used = "warn"          # `.unwrap()` — 业务层禁, 测试 `#[allow]`
expect_used = "warn"          # `.expect(msg)` — 同上, 但允许在有解释的
                              # 初始化常量/单例构造场景 (`expect("static")`)
panic = "warn"                # `panic!(...)` — 显式 panic, 同上
todo = "warn"                 # `todo!()` — 显式未实现
unimplemented = "warn"        # `unimplemented!()` — 显式未实现
cast_sign_loss = "allow"
# `struct_excessive_bools` — 状态结构体常出现 ≥4 布尔, 不强求拆分
struct_excessive_bools = "allow"
# `too_many_lines` — 业务编排函数常超 100 行, 拆函数比触发 lint 更重
too_many_lines = "allow"
# `result_large_err` — `WebError` 含 `Box<dyn>`, 故意大
result_large_err = "allow"
